syntax = "proto3";

package pb;

option go_package = "./pb";

import "google/protobuf/timestamp.proto";

message User {
  int64 id = 1;
  string username = 2;
  string full_name = 3;
  string email = 4;
  google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp updated_at = 6;
  optional google.protobuf.Timestamp deleted_at = 7;
}
